# a_video_editor_app

./: README.md  video_editor_app.sln
ClineRules/: CLINE_RULE.md
VideoEditor/: README.md
VideoEditor/CoreModels/: Models.cs
VideoEditor/Interop/: Interop.csproj  NativeMethods.cs  VideoEngineService.cs
VideoEditor/UI/: App.xaml  App.xaml.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  RelayCommand.cs  UI.csproj  ViewModelBase.cs
VideoEditor/VideoEngine/: CMakeLists.txt  VideoEngine.cpp  VideoEngine.h
